# dglink

./: README.md  col_report.tsv  file_report.tsv  pyproject.toml
dglink/: __init__.py  build.py  graph_embedding.py  meta_parse.py  parse_tools_and_publications.py  programatic_build.py  pull_all_files.py
dglink/applications/project_similarity/: graph_embedding.py  jacquard_sim.py  process_edges.py
dglink/applications/semantic_search/: compose.yaml
dglink/core/: constants.py  dicom_data.py  edges.py  experimental_data.py  meta.py  nodes.py  projects.py  tabular_data.py  utils.py  vcf_data.py  wiki.py
dglink/graph_embedding/: graph_embedding.py  jacquard_sim.py  process_edges.py
dglink/kg_construction/: get_all_studies.py  meta_parse.py  nodes.py  parse_tools_and_publications.py  project_node_attrs.py  pull_all_files.py  utils.py
dglink/portals/nf_data_portal/: __init__.py  constants.py  nf_data_portal.py
dglink/resources/: Dockerfile  compose.yaml
dglink/resources/backend/: Dockerfile
dglink/resources/frontend/: app.py
dglink/resources/neo4j/: Dockerfile  nodes.tsv
dglink/resources/reports/: dicom_file_report.tsv  grouped_file_type_report.tsv  vcf_file_report.tsv
dglink/scripts/: assemble_nf_kg.py
dglink/semantic_search/: compose.yaml  test.tsv
dglink/semantic_search/backend/: Dockerfile  main.py  requirements.txt
dglink/semantic_search/frontend/: Dockerfile  app.py
examples/: build.py  programatic_build.py
scripts/: assemble_nf_kg.py  get_all_files.py  get_all_nf_files.py  process_dicom.py  process_vcf.py
(+40 files in other folders)
