[project]
name = "dglink"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.10"
dependencies = [
    "bioregistry>=0.12.42",
    "chardet>=5.2.0",
    "frictionless>=5.18.1",
    "gilda>=1.4.1",
    "indra>=1.24.0",
    "ipdb>=0.13.13",
    "ipython>=8.37.0",
    "openpyxl>=3.1.5",
    "pandas>=2.3.2",
    "synapseclient>=4.9.0",
    "xlrd>=2.0.2",
]
[project.optional-dependencies]
dev = [
	'ipdb',
	'jedi',
	'black',
	'pylint',
]
graph_embedding = [
    'pykeen'
]
